refactor: 불필요한 경고 제거 및 스트림 처리 개선